# Web_8

./: README.md  consumer.py  consumer_email.py  consumer_sms.py  main.py  models.py  producer.py  pyproject.toml  seed.py
